Saving images closes Blender #63813

Closed
opened 2019-04-23 11:29:06 +02:00 by Steffen Dünner · 12 comments

System Information
Operating system: Windows-10-10.0.17763 64 Bits
Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67

Blender Version
Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 07:16, hash: 532f4366a5
Worked: last build from buildbot (which is almost a week old now)

Short description of error
As soon as I save an image from the image editor Blender crashes / closes

Exact steps for others to reproduce the error

  • Open Blender
  • Press F11 to switch to an image editor
  • Click on "Create new image" and create any type of image (doesn't matter if it's just blank or a UV grid)
  • Save this image
  • Crash
**System Information** Operating system: Windows-10-10.0.17763 64 Bits Graphics card: GeForce GTX 1080 Ti/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 419.67 **Blender Version** Broken: version: 2.80 (sub 58), branch: master, commit date: 2019-04-23 07:16, hash: `532f4366a5` Worked: last build from buildbot (which is almost a week old now) **Short description of error** As soon as I save an image from the image editor Blender crashes / closes **Exact steps for others to reproduce the error** - Open Blender - Press F11 to switch to an image editor - Click on "Create new image" and create any type of image (doesn't matter if it's just blank or a UV grid) - Save this image - Crash

Added subscriber: @SteffenD

Added subscriber: @SteffenD

#63832 was marked as duplicate of this issue

#63832 was marked as duplicate of this issue
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

I cannot recreate the crash.
Can you give a concrete example of image settings that results in a crash for you?

I cannot recreate the crash. Can you give a concrete example of image settings that results in a crash for you?

In my case it's the default PNG, 8-bits, RGBA with 15% compression, but it reliably crashes with JPEG and no matter what settings I use.
I already tried loading the factory defaults first but to no avail.

In my case it's the default PNG, 8-bits, RGBA with 15% compression, but it reliably crashes with JPEG and no matter what settings I use. I already tried loading the factory defaults first but to no avail.
Member

Hm, thx, still can't reproduce it; waiting for someone else to check.

Hm, thx, still can't reproduce it; waiting for someone else to check.

Thanks for having a look at it. Just in case it helps, this is what I get if I start and crash Blender from the command line:

Error   : EXCEPTION_ACCESS_VIOLATION
Address : 0x00007FF6E5231721
Module  : H:\blender28-git\build_windows_Release_x64_vc16_Release\bin\Release\blender.exe
Thanks for having a look at it. Just in case it helps, this is what I get if I start and crash Blender from the command line: ``` Error : EXCEPTION_ACCESS_VIOLATION Address : 0x00007FF6E5231721 Module : H:\blender28-git\build_windows_Release_x64_vc16_Release\bin\Release\blender.exe ```

OK, did a complete rebuild from scratch and vc16 libs: same crash
And just a few minutes ago a fresh build from the Buildbot came out ( 5a144c797a ) and it also crashes on 2 different workstations (the one in the description above and a Threadripper 1950x machine with a GTX 1080, both running Win10 x64).

OK, did a complete rebuild from scratch and vc16 libs: same crash And just a few minutes ago a fresh build from the Buildbot came out ( 5a144c797a3b ) and it also crashes on 2 different workstations (the one in the description above and a Threadripper 1950x machine with a GTX 1080, both running Win10 x64).
Brecht Van Lommel self-assigned this 2019-04-23 18:52:53 +02:00

Added subscriber: @mikhluz

Added subscriber: @mikhluz

This issue was referenced by f32902e6da

This issue was referenced by f32902e6dacf6f31d5b91e834a5eb259d30183d0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Awesome! 👍

Awesome! :thumbsup:
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#63813
No description provided.