Fix T63813: crash saving images on Windows

The danger of void pointers...